# phising_detect

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  domain_fetcher.py  email_parser.py  main.py  models.py  phishing_detector.py
front/: __init__.py  app.py
tests/: __init__.py  test_api.py  test_email_parser.py  test_phishing_detector.py
